--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body{
-margin:50px;
+margin: 5px;
 padding: 10px;
 font-family:Arial, Helvetica, sans-serif;
 background:whitesmoke;
@@ -7,55 +7,70 @@ padding: auto;
 text-align:center;
 }
 
-.header{
-background-color: white;
-padding-inline-start: 0%;
+.wrapper{
+margin:5px;
+}
+
+.flex-container {
+display:flex;
+flex-direction:column;
+align-items:center;
+padding: 20px;
 
 }
-section{
-padding:auto;
-background:whitesmoke;
 
-
+.header{
+background-color: white;
+padding: inline start 1px;
 }
 
 .box{
 background:white;         
-width: 600px;
+width: 750px;
 height: 600px;
-margin: auto;
-margin-bottom:20px;
-margin-top: 20px;
-border:1px solid #e7e4e4;
-border-radius:10px;
+margin-bottom :20px; 
 }
 
 .head{
-padding: 10px;
-object-fit: contain;
+padding: 20px;
+height: 20px;
+text-align: left;
+border: whitesmoke 1px solid  ;
 }
+
 .head h2{
 float: left;
 font-size: 18px;
+
 }
+
 .date{
-float: right; 
-padding: auto;
+float:right; 
+position:relative;
+height: 20px;
+padding: 20px;
 }
 
 .photo{
-width: 600px;
-height: 350px; 
-position: relative;
+width: 750px;
+height: 400px;
+padding-top: 25px;
+padding-left: 0;
+padding-right: 0 ;
 }
 
 img{
-width: 100%;
-object-fit:contain;
+object-fit:cover;
+width:100%;
+height: 100%;
 
 }
-.description {
-padding:auto;
-height:20px;
-
+.descripcion {
+word-wrap: break-word;  
+flex-grow: auto;
+padding: 20px;
+height: 20px;
+text-align: left;
+font-family:Arial, Helvetica, sans-serif;
+border: whitesmoke 1px solid ;
 }
